--- a/public/posts/effective-api-logging.mdx
+++ b/public/posts/effective-api-logging.mdx
@@ -1,6 +1,6 @@
 # Effective API Logging
 
-In the previous post I explained an <a href='api-journey-client-side'>API Journey – Client Side</a>, to describe technical behaviours OAuth clients may need to implement. This post explains a way to design API technical support logs to meet people requirements, so that they can run useful <a href='api-technical-support-analysis.mdx'>technical support queries</a>.
+In the previous post I explained an <a href='api-journey-client-side.mdx'>API Journey - Client Side</a>, to describe technical behaviours OAuth clients may need to implement. This post explains a way to design API technical support logs to meet people requirements, so that they can run useful <a href='api-technical-support-analysis.mdx'>technical support queries</a>.
 
 ### Logging Frameworks
 
@@ -408,7 +408,7 @@ Any API client can supply the following three custom HTTP headers in API request
 - A *Session ID* for all requests in the same authenticated user session.
 - A *Client Name* to easily identify the client.
 
-This *Client Context* helps to satisfy <a href='api-technical-support-analysis'>query use cases</a>, including the ability to quickly filter logs for your own session ID:
+This *Client Context* helps to satisfy <a href='api-technical-support-analysis.mdx'>query use cases</a>, including the ability to quickly filter logs for your own session ID:
 
 ![application session](../images/280/application-session.jpg?v=20240913)
 
@@ -460,5 +460,5 @@ I articulated how this blog’s logging would behave in a platform of APIs. Next
 
 ### Next
 
-- I take a detailed look at <a href='error-handling-and-supportability'>Error Handling and Supportability</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I take a detailed look at <a href='error-handling-and-supportability.mdx'>Error Handling and Supportability</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
