--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -1,10 +1,10 @@
 # Final SPA – Overview
 
-Previously I explained the <a href='spa-back-end-for-front-end'>Backend for Frontend</a> setup for the final SPA, where remote API components issue cookies on behalf of the SPA. Next I summarise the main frontend behaviours of the completed SPA, after which I show how to run it locally.
+Previously I explained the <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> setup for the final SPA, where remote API components issue cookies on behalf of the SPA. Next I summarise the main frontend behaviours of the completed SPA, after which I show how to run it locally.
 
 ### Key Features
 
-The final SPA improves on the previous <a href='improved-spa-code-sample-overview'>Updated SPA</a>, to meet some key requirements. It is difficult to satisfy all of these at the same time:
+The final SPA improves on the previous <a href='improved-spa-code-sample-overview.mdx'>Updated SPA</a>, to meet some key requirements. It is difficult to satisfy all of these at the same time:
 
 | Requirement | Description |
 | ----------- | ----------- |
@@ -18,11 +18,11 @@ I deploy the overall system of the SPA and APIs to AWS. I upload the SPA’s web
 
 ![aws technologies](../images/220/aws-technologies.jpg)
 
-I deploy the API code sample to AWS as <a href='serverless-api-overview'>Serverless Lambda Functions</a> that the AWS API Gateway exposes to the internet. I find this API technology a little suboptimal in some areas, including performance, but it provides low cost backend hosting for this blog's demo APIs.
+I deploy the API code sample to AWS as <a href='serverless-api-overview.mdx'>Serverless Lambda Functions</a> that the AWS API Gateway exposes to the internet. I find this API technology a little suboptimal in some areas, including performance, but it provides low cost backend hosting for this blog's demo APIs.
 
 ### Online Deployment
 
-Any reader can run the AWS deployed version of the SPA from this blog’s <a href='quick-start'>Cloud Samples Quick Start</a> page. You can sign in to the SPA with a test user account, then test OAuth lifecycle events via the demo app’s buttons:
+Any reader can run the AWS deployed version of the SPA from this blog's <a href='quick-start.mdx'>Cloud Samples Quick Start</a> page. You can sign in to the SPA with a test user account, then test OAuth lifecycle events via the demo app’s buttons:
 
 ![online spa](../images/220/online-spa.jpg?v=20240713)
 
@@ -148,5 +148,5 @@ I summarised the behaviour of the final SPA's web architecture. Development uses
 
 ### Next
 
-- I explain <a href='how-to-run-the-react-js-spa'>How to Run the Final SPA</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain <a href='how-to-run-the-react-js-spa.mdx'>How to Run the Final SPA</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
