--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -1,6 +1,6 @@
 # How to Run the React SPA
 
-Previously I provided a <a href='final-spa-overview'>Final SPA Overview</a> with the main high-level architecture behaviors. Next I show how to run the final SPA on a development computer in a couple of different configurations.
+Previously I provided a <a href='final-spa-overview.mdx'>Final SPA Overview</a> with the main high-level architecture behaviors. Next I show how to run the final SPA on a development computer in a couple of different configurations.
 
 ### Step 1: Download the GitHub Code
 
@@ -43,7 +43,7 @@ The repository's code consists of the following main areas:
 
 ### Step 4: View the React Code
 
-The SPA now uses React for its views, which have identical behaviour to those from <a href='basicspa-codingkeypoints/#spa-views'>Earlier SPA Code Samples</a>:
+The SPA now uses React for its views, which have identical behaviour to those from <a href='basicspa-codingkeypoints.mdx'>Earlier SPA Code Samples</a>:
 
 ```typescript
 export function TitleView(props: TitleViewProps): JSX.Element {
@@ -85,7 +85,7 @@ The frontend can run in watch mode, so that you follow a pure SPA development mo
 
 ### Step 6: Configure SSL Trust
 
-The web host uses SSL and downloads some development certificates, so you must ensure that your browser trusts the root certificate at the below location, according to the <a href='developer-ssl-setup#trust-a-root-certificate-in-browsers'>SSL Trust Configuration</a> post.
+The web host uses SSL and downloads some development certificates, so you must ensure that your browser trusts the root certificate at the below location, according to the <a href='developer-ssl-setup.mdx'>SSL Trust Configuration</a> post.
 
 ```markdown
 certs/authsamples-dev.ca.crt
@@ -157,9 +157,9 @@ It is also possible to run an API that provides the SPA’s data on the local co
 
 Select one of this blog’s final APIs from the below list, and follow its instructions, to run the API on port 446:
 
-- <a href='api-architecture-node'>Node.js API</a>
-- <a href='net-core-code-sample-overview'>.NET API</a>
-- <a href='java-spring-boot-api-overview'>Java Spring Boot API</a>
+- <a href='api-architecture-node.mdx'>Node.js API</a>
+- <a href='net-core-code-sample-overview.mdx'>.NET API</a>
+- <a href='java-spring-boot-api-overview.mdx'>Java Spring Boot API</a>
 
 ### Step B: Update DNS
 
@@ -207,5 +207,5 @@ I explained how to run the final SPA code sample, which has more moving parts th
 
 ### Next
 
-- Next I explain some <a href='reactjs-codingkeypoints'>Final SPA Code Details</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- Next I explain some <a href='reactjs-codingkeypoints.mdx'>Final SPA Code Details</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
