--- a/public/posts/ios-code-sample-coding-key-points.mdx
+++ b/public/posts/ios-code-sample-coding-key-points.mdx
@@ -1,10 +1,10 @@
 # iOS Code Sample – Code Details
 
-Previously we described our <a href='ios-code-sample-infrastructure'>iOS Infrastructure Setup</a> and we will now look at some key areas of our sample’s code. See also the <a href='api-journey-client-side'>Client Side API Journey</a> to understand the background and the requirements being met.
+Previously we described our <a href='ios-code-sample-infrastructure.mdx'>iOS Infrastructure Setup</a> and we will now look at some key areas of our sample’s code. See also the <a href='api-journey-client-side.mdx'>Client Side API Journey</a> to understand the background and the requirements being met.
 
 ### Portable Code
 
-One of this blog’s coding goals is to use the same classes across multiple platforms. Our iOS App uses the same logical separation of responsibilities into classes as the earlier <a href='reactjs-codingkeypoints'>React SPA</a>:
+One of this blog’s coding goals is to use the same classes across multiple platforms. Our iOS App uses the same logical separation of responsibilities into classes as the earlier <a href='reactjs-codingkeypoints.mdx'>React SPA</a>:
 
 <div className='smallimage'>
     <img src='../images/570/code-layout.jpg?v=20240914' alt='code layout' />
@@ -807,5 +807,5 @@ We have implemented an OpenID Connect secured iOS App with no blocking issues. B
 
 ### Next
 
-- Next we will start our final theme of <a href='cloud-hosting'>Cloud Deployment</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we will start our final theme of <a href='cloud-hosting.mdx'>Cloud Deployment</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
