--- a/public/posts/logout.mdx
+++ b/public/posts/logout.mdx
@@ -1,6 +1,6 @@
 # Logout
 
-Previously I explained how <a href='user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</a> can work for SPAs. Next I provide a brief overview of practical logout behaviours for OAuth-secured apps.
+Previously I explained how <a href='user-sessions-and-token-renewal.mdx'>Iframe-Based Access Token Renewal</a> can work for SPAs. Next I provide a brief overview of practical logout behaviours for OAuth-secured apps.
 
 ### Logouts and Users
 
@@ -90,5 +90,5 @@ I explained how OAuth logout does not always work as perfectly as you may expect
 
 ### Next
 
-- I explain the role of <a href='id-tokens'>ID Tokens</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain the role of <a href='id-tokens.mdx'>ID Tokens</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
