--- a/public/posts/managed-authorization-server-setup.mdx
+++ b/public/posts/managed-authorization-server-setup.mdx
@@ -1,6 +1,6 @@
 # Cloud Authorization Server Setup
 
-Previously we explained our <a href='cloud-domain-setup'>Cloud Domain Setup</a> and next we will describe the more advanced configuration of AWS Cognito as a managed authorization server.
+Previously we explained our <a href='cloud-domain-setup.mdx'>Cloud Domain Setup</a> and next we will describe the more advanced configuration of AWS Cognito as a managed authorization server.
 
 ### Create the Authorization Server
 
@@ -8,7 +8,7 @@ In this blog I only use the standards-based authorization server role. In AWS te
 
 ![user pool](../images/600/user-pool.jpg)
 
-The basic configuration was described in the earlier post on <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>. This included creating a user schema with custom fields used for authorization in APIs.
+The basic configuration was described in the earlier post on <a href='oauth-infrastructure-setup.mdx'>OAuth Infrastructure Setup</a>. This included creating a user schema with custom fields used for authorization in APIs.
 
 ### Create a Custom Domain
 
@@ -87,7 +87,7 @@ The *claimsToSuppress* section is used to remove personal data from ID tokens, s
 
 The *claimsToAddOrOverride* section is used to customise access tokens. Claims are issued based on the client's scope so that different custom claims can be issued to different clients.
 
-These claims provide convenient fields for APIs and produce a more complete access token. In many cases this helps to lock down the access token and reduce its privileges. This blog’s use of claims is further explained in the blog post on <a href='api-authorization-design'>API Authorization Behavior</a>.
+These claims provide convenient fields for APIs and produce a more complete access token. In many cases this helps to lock down the access token and reduce its privileges. This blog’s use of claims is further explained in the blog post on <a href='api-authorization-design.mdx'>API Authorization Behavior</a>.
 
 ### Where Are We?
 
@@ -95,5 +95,5 @@ We have completed the configuration of a low maintenance cloud authorization ser
 
 ### Next
 
-- Next we will explain this blog's <a href='cdn-static-content-delivery'>Web Content Delivery</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we will explain this blog's <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
