--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -1,10 +1,10 @@
-# .NET API – Overview
+# .NET API - Overview
 
-Previously I explained the <a href='final-nodeapi-coding-key-points'>Final Node.js API Code Details</a>, including some behaviours from this blog’s <a href='api-journey-server-side'>API Journey – Server Side</a> blog post. Next I provide an equivalent API in C# and .NET.
+Previously I explained the <a href='final-nodeapi-coding-key-points.mdx'>Final Node.js API Code Details</a>, including some behaviours from this blog's <a href='api-journey-server-side.mdx'>API Journey - Server Side</a> blog post. Next I provide an equivalent API in C# and .NET.
 
 ### Final API Code Sample Overview
 
-This blog's API has a couple of simple endpoints that return mock data for a money-based theme of investments. The API aims to be visual and serves this blog’s apps, such as the <a href='how-to-run-the-react-js-spa'>Final SPA</a> below. Running both together ensures that the API is client-focused and enables you to focus on API logs that the client generates.
+This blog's API has a couple of simple endpoints that return mock data for a money-based theme of investments. The API aims to be visual and serves this blog's apps, such as the <a href='how-to-run-the-react-js-spa.mdx'>Final SPA</a> below. Running both together ensures that the API is client-focused and enables you to focus on API logs that the client generates.
 
 ![spa and api](../images/320/spa-and-api.jpg?v=20240915)
 
@@ -63,7 +63,7 @@ Run the following command, which downloads some OpenSSL development certificates
 
 ### Step 2: Configure SSL Trust
 
-To prevent SSL trust problems from tests or the browser you should <a href='developer-ssl-setup'>Configure .NET and Browser Trust</a> for the root certificate at the following location. 
+To prevent SSL trust problems from tests or the browser you should <a href='developer-ssl-setup.mdx'>Configure .NET and Browser Trust</a> for the root certificate at the following location. 
 
 ```markdown
 certs/authsamples-dev.ca.crt
@@ -112,10 +112,10 @@ The <a href='api-automated-tests.mdx'>API Automated Tests</a> post explains how 
 
 You can run any of this blog's final frontend clients against the API:
 
-- <a href='final-spa-overview'>Final SPA</a>
-- <a href='final-desktop-sample-overview'>Final Desktop App</a>
-- <a href='android-code-sample-overview'>Final Android App</a>
-- <a href='ios-code-sample-overview'>Final iOS App</a>
+- <a href='final-spa-overview.mdx'>Final SPA</a>
+- <a href='final-desktop-sample-overview.mdx'>Final Desktop App</a>
+- <a href='android-code-sample-overview.mdx'>Final Android App</a>
+- <a href='ios-code-sample-overview.mdx'>Final iOS App</a>
 
 To run the final SPA as an API client, start in the API's folder, then run the SPA from a parallel folder:
 
@@ -137,8 +137,8 @@ The *run.sh* script invokes the default browser at *https://www.authsamples-dev.
 
 The API implements its security according to these two blog posts, using a JOSE library and some custom claims handling:
 
-- <a href='jwt-access-token-validation'>JWT Access Token Validation</a>
-- <a href='api-authorization-design'>API Authorization Design</a>
+- <a href='jwt-access-token-validation.mdx'>JWT Access Token Validation</a>
+- <a href='api-authorization-design.mdx'>API Authorization Design</a>
 
 The overall behaviour manages OAuth security correctly while setting up the API’s business logic with the authorization values it needs. These values may originate from multiple data sources and may not always be issued to tokens:
 
@@ -182,7 +182,7 @@ Meanwhile, the API also writes text files to its *logs* folder in a bare JSON fo
 
 ![bare logs](../images/320/bare-logs.jpg)
 
-Optionally, you can follow the <a href='log-aggregation-setup'>Log Aggregation Setup</a> to run a Docker-based deployment of the Elastic Stack. You can then run <a href='api-technical-support-analysis'>Technical Support Queries</a> against the API's logs. This would be useful in a production system, to make sense of large volumes of API requests.
+Optionally, you can follow the <a href='log-aggregation-setup.mdx'>Log Aggregation Setup</a> to run a Docker-based deployment of the Elastic Stack. You can then run <a href='api-technical-support-analysis.mdx'>Technical Support Queries</a> against the API's logs. This would be useful in a production system, to make sense of large volumes of API requests.
 
 ### Cloud Native Deployment
 
@@ -200,5 +200,5 @@ I summarised the key productivity behaviours of this blog's final APIs. This sta
 
 ### Next
 
-- I explain this blog's <a href='net-core-api-oauth-integration'>.NET API OAuth Integration</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain this blog's <a href='net-core-api-oauth-integration.mdx'>.NET API OAuth Integration</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
