--- a/public/posts/spring-boot-api-coding-model.mdx
+++ b/public/posts/spring-boot-api-coding-model.mdx
@@ -1,6 +1,6 @@
 # Java API – Code Details
 
-In our previous post we described our <a href='spring-boot-api-oauth-integration'>Spring Boot API OAuth Integration</a>. We will now drill into some final implementation details.
+In our previous post we described our <a href='spring-boot-api-oauth-integration.mdx'>Spring Boot API OAuth Integration</a>. We will now drill into some final implementation details.
 
 ### Code Structure
 
@@ -206,7 +206,7 @@ To solve this problem I created a [Spring Boot Custom Scope](https://www.baeldun
 
 ### Logging Implementation
 
-API logging is also implemented via plumbing code, and the end goal is to enable <a href='api-technical-support-analysis'>platform wide technical support queries by people</a>.
+API logging is also implemented via plumbing code, and the end goal is to enable <a href='api-technical-support-analysis.mdx'>platform wide technical support queries by people</a>.
 
 <div className='smallimage'>
     <img src='../images/370/logging-classes.jpg' alt='logging classes' />
@@ -283,7 +283,7 @@ public class CompanyRepository {
 }
 ```
 
-The logging classes write to a log file and, if this blog’s <a href='log-aggregation-setup'>Log Aggregation Setup</a> is followed, logs will automatically flow to Elasticsearch:
+The logging classes write to a log file and, if this blog’s <a href='log-aggregation-setup.mdx'>Log Aggregation Setup</a> is followed, logs will automatically flow to Elasticsearch:
 
 ![log queries](../images/370/log-queries.jpg)
 
@@ -291,7 +291,7 @@ The sample API uses fixed appenders and fixed JSON output formats. In a real API
 
 ### Error Handling Implementation
 
-The API implements this blog’s <a href='error-handling-and-supportability'>Error Handling and Supportability</a> design. By default all errors escape to the global exception handler class, whose role is to log errors and return an error response to the caller:
+The API implements this blog’s <a href='error-handling-and-supportability.mdx'>Error Handling and Supportability</a> design. By default all errors escape to the global exception handler class, whose role is to log errors and return an error response to the caller:
 
 ```java
 @RestControllerAdvice
@@ -403,5 +403,5 @@ We have implemented some foundational code in Java. The plumbing is separated fr
 
 ### Next
 
-- Next we will run some <a href='api-automated-tests'>API Automated Tests</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we will run some <a href='api-automated-tests.mdx'>API Automated Tests</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
