--- a/public/posts/updated-spa-coding-key-points.mdx
+++ b/public/posts/updated-spa-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Updated SPA – Code Details
 
-In the previous post I described the behaviour of the <a href='improved-spa-code-sample-overview'>Updated SPA and API Code Sample</a>. Next I summarise some changes to the SPA code, with a particular focus on <a href='user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</a> and its difficulties.
+In the previous post I described the behaviour of the <a href='improved-spa-code-sample-overview.mdx'>Updated SPA and API Code Sample</a>. Next I summarise some changes to the SPA code, with a particular focus on <a href='user-sessions-and-token-renewal.mdx'>Iframe-Based Access Token Renewal</a> and its difficulties.
 
 ### SPA OAuth Configuration Changes
 
@@ -290,7 +290,7 @@ public async startLogout(): Promise<void> {
 
 ### SPA Multi Tab Logout
 
-The sample also supports multi-tab logout, described in the earlier <a href='logout'>Logout</a> post. Rather than attempting to use single-logout solutions that send the SSO cookie from iframes, the SPA simply watches an *isLoggedOut* boolean in local storage, using the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API).
+The sample also supports multi-tab logout, described in the earlier <a href='logout.mdx'>Logout</a> post. Rather than attempting to use single-logout solutions that send the SSO cookie from iframes, the SPA simply watches an *isLoggedOut* boolean in local storage, using the [Browser Storage API](https://developer.mozilla.org/en-US/docs/Web/API/Web_Storage_API).
 
 If a user runs multiple tabs and signs out on one of them, the following code then run in all other tabs, each of which simply removes its tokens and redirects the user to the logged out view.
 
@@ -311,5 +311,5 @@ I explained the code to complete the traditional SPA flow, with in-memory storag
 
 ### Next
 
-- Next I provide some <a href='updated-api-coding-key-points'>Updated API Code Details</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- Next I provide some <a href='updated-api-coding-key-points.mdx'>Updated API Code Details</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
