--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -66,9 +66,9 @@ This blog's posts and the accompanying code samples explain OAuth features and d
 
 | Stage | Description |
 | ----- | ----------- |
-| <a href='basicspa-overview'>Basics</a> | Getting an SPA, API and authorization server working together, with a developer friendly setup. |
-| <a href='improved-spa-code-sample-overview'>Updated</a> | SPA session management for a complete user experience, and flexible API authorization to protect data. |
-| <a href='final-spa-overview'>Final</a> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs. |
+| <a href='basicspa-overview.mdx'>Basics</a> | Getting an SPA, API and authorization server working together, with a developer friendly setup. |
+| <a href='improved-spa-code-sample-overview.mdx'>Updated</a> | SPA session management for a complete user experience, and flexible API authorization to protect data. |
+| <a href='final-spa-overview.mdx'>Final</a> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs. |
 
 ### Where Are We?
 
@@ -76,5 +76,5 @@ I articulated some desired behaviour, and next I provide a code sample to get st
 
 ### Next
 
-- I provide an <a href='basicspa-overview'>Initial SPA Code Sample Overview</a>
-- For a list of all blog posts see the  <a href='index'>Index Page</a>
+- I provide an <a href='basicspa-overview.mdx'>Initial SPA Code Sample Overview</a>
+- For a list of all blog posts see the  <a href='index.mdx'>Index Page</a>
