--- a/public/posts/desktop-apps-overview.mdx
+++ b/public/posts/desktop-apps-overview.mdx
@@ -1,6 +1,6 @@
 # Desktop Code Sample Overview
 
-Previously I summarised this blog’s <a href='native-architecture-goals'>Native Architecture Goals</a>. I cover secure mobile apps in later posts. First though, I provide a couple of OpenID Connect secured desktop code samples. They connect to <a href='cloud-hosting'>HTTPS endpoints hosted in AWS</a>, so that you only need to run the desktop app's code to get a fully integrated solution.
+Previously I summarised this blog’s <a href='native-architecture-goals.mdx'>Native Architecture Goals</a>. I cover secure mobile apps in later posts. First though, I provide a couple of OpenID Connect secured desktop code samples. They connect to <a href='cloud-hosting.mdx'>HTTPS endpoints hosted in AWS</a>, so that you only need to run the desktop app's code to get a fully integrated solution.
 
 ### Features
 
@@ -19,7 +19,7 @@ The desktop app has the same theme and views as this blog's earlier SPAs:
 
 ![desktop app](../images/410/desktop-app.jpg?v=20240922)
 
-I use [Electron](https://www.electronjs.org/), which enables you to develop desktop views with web technologies. I re-used the views from this blog's <a href='improved-spa-code-sample-overview'>Second SPA</a>:
+I use [Electron](https://www.electronjs.org/), which enables you to develop desktop views with web technologies. I re-used the views from this blog's <a href='improved-spa-code-sample-overview.mdx'>Second SPA</a>:
 
 ![electronjs](../images/410/electronjs.jpg)
 
@@ -70,5 +70,5 @@ I introduced this blog's initial desktop code sample and also explained how to r
 
 ### Next
 
-- I explain <a href='desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</a>.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain <a href='desktop-app-how-to-run-the-code-sample.mdx'>How to Run the Desktop Code Sample</a>.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
