--- a/public/posts/federated-logins.mdx
+++ b/public/posts/federated-logins.mdx
@@ -1,10 +1,10 @@
 # User Authentication Behaviour
 
-Previously I explained this blog’s <a href='api-authorization-design'>API Authorization Behaviour</a>. Next I provide a brief overview of some key points that you should understand about OAuth and user authentication.
+Previously I explained this blog’s <a href='api-authorization-design.mdx'>API Authorization Behaviour</a>. Next I provide a brief overview of some key points that you should understand about OAuth and user authentication.
 
 ### The OpenID Connect Code Flow
 
-OAuth clients must never implement user authentication in code. Instead, clients run an authorization code flow to hand over authentication to the authorization server. The earlier post on <a href='basicspa-oauthworkflow'>OAuth Messages</a> explains how this works.
+OAuth clients must never implement user authentication in code. Instead, clients run an authorization code flow to hand over authentication to the authorization server. The earlier post on <a href='basicspa-oauthworkflow.mdx'>OAuth Messages</a> explains how this works.
 
 ![code flow](../images/140/code-flow.jpg?v=20240822)
 
@@ -68,5 +68,5 @@ I explained how OAuth should enable your users to authenticate in many possible 
 
 ### Next
 
-- I explain the traditional <a href='user-sessions-and-token-renewal'>Iframe Access Token Renewal</a> flow for SPAs.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain the traditional <a href='user-sessions-and-token-renewal.mdx'>Iframe Access Token Renewal</a> flow for SPAs.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
