--- a/public/posts/final-desktop-app-coding-key-points.mdx
+++ b/public/posts/final-desktop-app-coding-key-points.mdx
@@ -1,6 +1,6 @@
 # Final Desktop App – Code Details
 
-Previously I summarised the behavior of the <a href='final-desktop-sample-overview'>Final Desktop Code Sample</a>. This post provides an overview of the app's code changes. See also the <a href='api-journey-client-side'>Client Side API Journey</a> to understand the background and the requirements being met.
+Previously I summarised the behavior of the <a href='final-desktop-sample-overview.mdx'>Final Desktop Code Sample</a>. This post provides an overview of the app's code changes. See also the <a href='api-journey-client-side.mdx'>Client Side API Journey</a> to understand the background and the requirements being met.
 
 ### Code Layout
 
@@ -204,5 +204,5 @@ I updated the desktop app with new features that improve usability, to complete 
 
 ### Next
 
-- I explain an initial <a href='android-setup'>Android Setup</a> that includes running the AppAuth Andoid code sample.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain an initial <a href='android-setup.mdx'>Android Setup</a> that includes running the AppAuth Andoid code sample.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
