--- a/public/posts/final-desktop-sample-overview.mdx
+++ b/public/posts/final-desktop-sample-overview.mdx
@@ -1,6 +1,6 @@
 # Final Desktop App – Overview
 
-Previously I explained some <a href='desktop-app-coding-key-points'>Code Details</a> for this blog's initial desktop app. Next I add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <a href='cloud-hosting'>HTTPS endpoints hosted in AWS</a>, so that you only need to run the desktop app's code to get a fully integrated solution.
+Previously I explained some <a href='desktop-app-coding-key-points.mdx'>Code Details</a> for this blog's initial desktop app. Next I add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <a href='cloud-hosting.mdx'>HTTPS endpoints hosted in AWS</a>, so that you only need to run the desktop app's code to get a fully integrated solution.
 
 ### New Features
 
@@ -204,9 +204,9 @@ Finally, note that on macOS, startup deep links only work if you run a packaged 
 
 If required, you can run the desktop app against a local OAuth secured API. You can do so for one of this blog’s final APIs and following its instructions to run it locally:
 
-- <a href='api-architecture-node'>Node.js API</a>
-- <a href='net-core-code-sample-overview'>.Net Core API</a>
-- <a href='java-spring-boot-api-overview'>Java Spring Boot API</a>
+- <a href='api-architecture-node.mdx'>Node.js API</a>
+- <a href='net-core-code-sample-overview.mdx'>.Net Core API</a>
+- <a href='java-spring-boot-api-overview.mdx'>Java Spring Boot API</a>
 
 To connect to local APIs, update the *apiBaseUrl* value in the desktop.config.json file to the URL of a local API:
 
@@ -239,5 +239,5 @@ I have updated the desktop code sample with some final features and explored des
 
 ### Next
 
-- I explain some <a href='final-desktop-app-coding-key-points'>Code Details</a> for the final desktop app.
-- For a list of all blog posts see the <a href='index'>Index Page</a>.
+- I explain some <a href='final-desktop-app-coding-key-points.mdx'>Code Details</a> for the final desktop app.
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>.
