--- a/public/posts/index.mdx
+++ b/public/posts/index.mdx
@@ -6,50 +6,50 @@
 
 The first theme focuses on foundations and core concepts. It provides integrated solutions with SPAs, APIs and the authorization server, and delivers a final SPA in line with current best practices.
 
-- <a href='web-architecture-goals'>Web Architecture Goals</a>
+- <a href='web-architecture-goals.mdx'>Web Architecture Goals</a>
 
 **Basic SPA Code Sample**
 
-- <a href='basicspa-overview'>Overview</a>
-- <a href='basicspa-execution'>How to Run the Sample</a>
-- <a href='basicspa-oauthworkflow'>OAuth Messages</a>
-- <a href='basicspa-codingkeypoints'>SPA Code Details</a>
-- <a href='basicapi-codingkeypoints'>API Code Details</a>
-- <a href='jwt-access-token-validation'>JWT Access Token Validation</a>
+- <a href='basicspa-overview.mdx'>Overview</a>
+- <a href='basicspa-execution.mdx'>How to Run the Sample</a>
+- <a href='basicspa-oauthworkflow.mdx'>OAuth Messages</a>
+- <a href='basicspa-codingkeypoints.mdx'>SPA Code Details</a>
+- <a href='basicapi-codingkeypoints.mdx'>API Code Details</a>
+- <a href='jwt-access-token-validation.mdx'>JWT Access Token Validation</a>
 
 **OAuth Setup**
 
-- <a href='oauth-infrastructure-setup'>OAuth Infrastructure Setup</a>
-- <a href='web-technology-setup'>JavaScript Technology Setup</a>
-- <a href='http-debugging-setup'>HTTP Proxy Setup</a>
-- <a href='developer-ssl-setup'>SSL Trust Configuration</a>
+- <a href='oauth-infrastructure-setup.mdx'>OAuth Infrastructure Setup</a>
+- <a href='web-technology-setup.mdx'>JavaScript Technology Setup</a>
+- <a href='http-debugging-setup.mdx'>HTTP Proxy Setup</a>
+- <a href='developer-ssl-setup.mdx'>SSL Trust Configuration</a>
 
 **Design Articles**
 
-- <a href='user-data'>User Data Management</a>
-- <a href='api-authorization-design'>API Authorization Behaviour</a>
-- <a href='federated-logins'>User Authentication Behaviour</a>
-- <a href='user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</a>
-- <a href='logout'>Logout</a>
-- <a href='id-tokens'>ID Tokens</a>
+- <a href='user-data.mdx'>User Data Management</a>
+- <a href='api-authorization-design.mdx'>API Authorization Behaviour</a>
+- <a href='federated-logins.mdx'>User Authentication Behaviour</a>
+- <a href='user-sessions-and-token-renewal.mdx'>Iframe-Based Access Token Renewal</a>
+- <a href='logout.mdx'>Logout</a>
+- <a href='id-tokens.mdx'>ID Tokens</a>
 
 **Updated SPA Code Sample**
 
-- <a href='improved-spa-code-sample-overview'>Overview / How to Run the Sample</a>
-- <a href='updated-spa-coding-key-points'>SPA Code Details</a>
-- <a href='updated-api-coding-key-points'>API Code Details</a>
+- <a href='improved-spa-code-sample-overview.mdx'>Overview / How to Run the Sample</a>
+- <a href='updated-spa-coding-key-points.mdx'>SPA Code Details</a>
+- <a href='updated-api-coding-key-points.mdx'>API Code Details</a>
 
 **Variation – Microsoft Entra ID**
 
-- <a href='azure-active-directory-setup'>Entra ID SPA and API Setup</a>
-- <a href='azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</a>
+- <a href='azure-active-directory-setup.mdx'>Entra ID SPA and API Setup</a>
+- <a href='azure-ad-troubleshooting.mdx'>Entra ID SPA and API OAuth Flow</a>
 
 **Final SPA Code Sample**
 
-- <a href='spa-back-end-for-front-end'>Backend for Frontend Behaviour</a>
-- <a href='final-spa-overview'>Overview</a>
-- <a href='how-to-run-the-react-js-spa'>How to Run the Sample</a>
-- <a href='reactjs-codingkeypoints'>Code Details</a>
+- <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend Behaviour</a>
+- <a href='final-spa-overview.mdx'>Overview</a>
+- <a href='how-to-run-the-react-js-spa.mdx'>How to Run the Sample</a>
+- <a href='reactjs-codingkeypoints.mdx'>Code Details</a>
 
 ### Theme 2 – API Architecture
 
@@ -57,75 +57,75 @@ The next theme focuses on the API architecture. This includes coding aspects rel
 
 **Design Articles**
 
-- <a href='api-platform-design'>API Platform Overview</a>
-- <a href='api-journey-server-side'>API Journey – Server Side</a>
-- <a href='api-journey-client-side'>API Journey – Client Side</a>
+- <a href='api-platform-design.mdx'>API Platform Overview</a>
+- <a href='api-journey-server-side.mdx'>API Journey – Server Side</a>
+- <a href='api-journey-client-side.mdx'>API Journey – Client Side</a>
 
 **Supportability**
 
-- <a href='effective-api-logging'>Effective API Logging</a>
-- <a href='error-handling-and-supportability'>Error Handling and Supportability</a>
+- <a href='effective-api-logging.mdx'>Effective API Logging</a>
+- <a href='error-handling-and-supportability.mdx'>Error Handling and Supportability</a>
 
 **Node.js API**
 
-- <a href='api-architecture-node'>Overview</a>
-- <a href='final-nodeapi-coding-key-points'>Code Details</a>
+- <a href='api-architecture-node.mdx'>Overview</a>
+- <a href='final-nodeapi-coding-key-points.mdx'>Code Details</a>
 
 **.NET API**
 
-- <a href='net-core-code-sample-overview'>Overview</a>
-- <a href='net-core-api-oauth-integration'>OAuth Integration</a>
-- <a href='net-core-api-coding-model'>Code Details</a>
+- <a href='net-core-code-sample-overview.mdx'>Overview</a>
+- <a href='net-core-api-oauth-integration.mdx'>OAuth Integration</a>
+- <a href='net-core-api-coding-model.mdx'>Code Details</a>
 
 **Java Spring Boot API**
 
-- <a href='java-spring-boot-api-overview'>Overview</a>
-- <a href='spring-boot-api-oauth-integration'>OAuth Integration</a>
-- <a href='spring-boot-api-coding-model'>Code Details</a>
+- <a href='java-spring-boot-api-overview.mdx'>Overview</a>
+- <a href='spring-boot-api-oauth-integration.mdx'>OAuth Integration</a>
+- <a href='spring-boot-api-coding-model.mdx'>Code Details</a>
 
 **Productivity**
 
-- <a href='api-automated-tests'>API Automated Tests</a>
-- <a href='log-aggregation-setup'>Log Aggregation Setup</a>
-- <a href='api-technical-support-analysis'>Technical Support Analysis</a>
+- <a href='api-automated-tests.mdx'>API Automated Tests</a>
+- <a href='log-aggregation-setup.mdx'>Log Aggregation Setup</a>
+- <a href='api-technical-support-analysis.mdx'>Technical Support Analysis</a>
 
 ### Theme 3 – Native Apps
 
 This theme covers solutions for desktop and mobile apps, and uses the recommended OAuth flows. It also provides example apps that can be used as a reference.
 
-- <a href='native-architecture-goals'>Native Architecture Goals</a>
+- <a href='native-architecture-goals.mdx'>Native Architecture Goals</a>
 
 **Initial Desktop App Code Sample**
 
-- <a href='desktop-apps-overview'>Overview</a>
-- <a href='desktop-app-how-to-run-the-code-sample'>How to Run the Sample</a>
-- <a href='desktop-app-coding-key-points'>Code Details</a>
+- <a href='desktop-apps-overview.mdx'>Overview</a>
+- <a href='desktop-app-how-to-run-the-code-sample.mdx'>How to Run the Sample</a>
+- <a href='desktop-app-coding-key-points.mdx'>Code Details</a>
 
 **Final Desktop App Code Sample**
 
-- <a href='final-desktop-sample-overview'>Overview / How to Run the Sample</a>
-- <a href='final-desktop-app-coding-key-points'>Code Details</a>
+- <a href='final-desktop-sample-overview.mdx'>Overview / How to Run the Sample</a>
+- <a href='final-desktop-app-coding-key-points.mdx'>Code Details</a>
 
 **Mobile Setup**
 
-- <a href='android-setup'>Android Setup + AppAuth Sample</a>
-- <a href='android-https-debugging'>Android HTTPS Debugging</a>
-- <a href='ios-setup'>iOS Setup + AppAuth Sample</a>
-- <a href='ios-https-debugging'>iOS HTTPS Debugging</a>
+- <a href='android-setup.mdx'>Android Setup + AppAuth Sample</a>
+- <a href='android-https-debugging.mdx'>Android HTTPS Debugging</a>
+- <a href='ios-setup.mdx'>iOS Setup + AppAuth Sample</a>
+- <a href='ios-https-debugging.mdx'>iOS HTTPS Debugging</a>
 
 **Android Code Sample**
 
-- <a href='android-code-sample-overview'>Code Sample Behaviour</a>
-- <a href='basicandroidapp-execution'>How to Run the Sample</a>
-- <a href='android-infrastructure-setup'>Infrastructure Setup</a>
-- <a href='android-coding-key-points'>Code Details</a>
+- <a href='android-code-sample-overview.mdx'>Code Sample Behaviour</a>
+- <a href='basicandroidapp-execution.mdx'>How to Run the Sample</a>
+- <a href='android-infrastructure-setup.mdx'>Infrastructure Setup</a>
+- <a href='android-coding-key-points.mdx'>Code Details</a>
 
 **iOS Code Sample**
 
-- <a href='ios-code-sample-overview'>Code Sample Behaviour</a>
-- <a href='how-to-run-the-ios-code-sample'>How to Run the Sample</a>
-- <a href='ios-code-sample-infrastructure'>Infrastructure Setup</a>
-- <a href='ios-code-sample-coding-key-points'>Code Details</a>
+- <a href='ios-code-sample-overview.mdx'>Code Sample Behaviour</a>
+- <a href='how-to-run-the-ios-code-sample.mdx'>How to Run the Sample</a>
+- <a href='ios-code-sample-infrastructure.mdx'>Infrastructure Setup</a>
+- <a href='ios-code-sample-coding-key-points.mdx'>Code Details</a>
 
 ### Theme 4 – Cloud Deployment
 
@@ -133,20 +133,20 @@ The final theme covers end-to-end deployment of components to run in the cloud. 
 
 **OAuth Domain Setup**
 
-- <a href='cloud-hosting'>Overview</a>
-- <a href='cloud-domain-setup'>Domain Setup</a>
-- <a href='managed-authorization-server-setup'>Cloud Authorization Server Setup</a>
+- <a href='cloud-hosting.mdx'>Overview</a>
+- <a href='cloud-domain-setup.mdx'>Domain Setup</a>
+- <a href='managed-authorization-server-setup.mdx'>Cloud Authorization Server Setup</a>
 
 **Modern Web Deployment**
 
-- <a href='cdn-static-content-delivery'>Web Content Delivery</a>
+- <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a>
 
 **Serverless APIs**
 
-- <a href='serverless-api-overview'>Serverless API Overview</a>
-- <a href='serverless-api-deployment'>Serverless API Deployment</a>
-- <a href='serverless-api-coding-model'>Serverless API Code Details</a>
+- <a href='serverless-api-overview.mdx'>Serverless API Overview</a>
+- <a href='serverless-api-deployment.mdx'>Serverless API Deployment</a>
+- <a href='serverless-api-coding-model.mdx'>Serverless API Code Details</a>
 
 **Cloud Native**
 
-- <a href='cloud--native-updates'>Cloud Native Updates</a>
+- <a href='cloud--native-updates.mdx'>Cloud Native Updates</a>
