--- a/public/posts/ios-https-debugging.mdx
+++ b/public/posts/ios-https-debugging.mdx
@@ -1,10 +1,10 @@
 # iOS HTTPS Debugging Setup
 
-Previously we put in place an initial iOS Setup and ran the <a href='ios-setup'>AppAuth iOS Code Sample</a>. Next I will explain a way to view HTTPS mobile traffic from iOS simulators and devices on a development computer.
+Previously we put in place an initial iOS Setup and ran the <a href='ios-setup.mdx'>AppAuth iOS Code Sample</a>. Next I will explain a way to view HTTPS mobile traffic from iOS simulators and devices on a development computer.
 
 ### Run the HTTP Proxy on the Host
 
-First configure and run the HTTP proxy on the host computer, as described in our earlier write up on <a href='http-debugging-setup'>HTTPS Debugging</a>. We also need to instruct the proxy to decrypt SSL traffic, as covered for other environments in the blog post on <a href='developer-ssl-setup'>SSL Trust Configuration</a>:
+First configure and run the HTTP proxy on the host computer, as described in our earlier write up on <a href='http-debugging-setup.mdx'>HTTPS Debugging</a>. We also need to instruct the proxy to decrypt SSL traffic, as covered for other environments in the blog post on <a href='developer-ssl-setup.mdx'>SSL Trust Configuration</a>:
 
 ### Determine the Computer’s IP Address
 
@@ -94,5 +94,5 @@ We have now completed our iOS HTTP debugging setup, and will now move on to desc
 
 ### Next
 
-- Next we will start describing our <a href='android-code-sample-overview'>Secured Android App’s Behaviour</a>
-- For a list of all blog posts see the <a href='index'>Index Page</a>
+- Next we will start describing our <a href='android-code-sample-overview.mdx'>Secured Android App’s Behaviour</a>
+- For a list of all blog posts see the <a href='index.mdx'>Index Page</a>
